# SRE-Zero

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  evals.md  pyproject.toml  start-backend.sh  start-frontend.sh
baselines/: __init__.py  factory.py  llm_agent.py  prompts.py  random_agent.py  scripted_expert.py
docs/: baseline_agents.md  benchmark_api.md  benchmark_status.md  environment_design.md  evaluation_metrics.md  full_result_tables.md  llm_baselines.md  paper_outline.md  phase1_status.md  reward_design.md  task_suite.md
eval/: example_results.json  plot_results.py  run_agent.py  run_all_eval.py  run_baseline_marks.py  run_benchmark.py  run_eval.py  run_tui.py  write_result_tables.py
examples/: print_task_catalog.py  run_single_episode.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: modelConfig.ts  simulator.ts  types.ts
srezero/: __init__.py  actions.py  benchmark.py  env.py  gym_env.py  llm_config.py  metrics.py  rewards.py  schemas.py  scoring.py  server.py  services.py  task_registry.py  task_splits.json
srezero/task_configs/: __init__.py  cache_auth_token_expired.json  cache_compression_disabled.json  cache_crash.json  cache_disabled_config_regression.json  cache_eviction_storm.json  cache_latency_degradation.json  cache_memory_pressure.json  (+33 more)
tests/: test_actions.py  test_benchmark_api.py  test_env.py  test_eval_task_filters.py  test_gym_env.py  test_llm_agent.py  test_llm_config.py  test_prompts.py  test_rewards.py  test_run_tui.py  test_tasks.py
(+13 files in other folders)
